objects/ESC_VSTS_Staging__c.object
<CustomObject>
    <description>ESC_VSTS_Staging to hold the records to be sent to TFS</description>
    <fields>
        <fullName>ESC_Account_Name__c</fullName>
        <description>Used in ESC_VSTS_Staging</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Created_Date__c</fullName>
        <label>Case Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Description__c</fullName>
        <description>Used in ESC_VSTS_Staging</description>
        <label>Case Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Diagnosis__c</fullName>
        <description>Used in ESC_VSTS_Staging</description>
        <label>Case Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Id__c</fullName>
        <label>Case Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Number__c</fullName>
        <description>Used in ESC_VSTS_Staging</description>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Priority__c</fullName>
        <description>Used in ESC_VSTS_Staging</description>
        <label>Case Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Product_Complement__c</fullName>
        <label>Case Product Complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Product_Version__c</fullName>
        <label>Case Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Product__c</fullName>
        <label>Case Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Severity__c</fullName>
        <description>Used in ESC_VSTS_Staging</description>
        <label>Case  Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Subject__c</fullName>
        <description>Captures the case subject on VSTS records</description>
        <label>Case Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Customer_Category__c</fullName>
        <label>Customer Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Error_Log__c</fullName>
        <label>Error Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Feed_Comment__c</fullName>
        <description>place holder of Feed comment from Salesforce to VSTS</description>
        <label>Feed Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Feed_Commented_Date__c</fullName>
        <label>Feed Commented Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Feed_Commented_by__c</fullName>
        <label>Feed Commented by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_IsAllowRepDB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value will be true or false</description>
        <label>IsAllowRepDB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Is_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Last_Comment_from_VSTS__c</fullName>
        <description>VSTS comment to SFDC</description>
        <label>Last Comment from VSTS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Last_Statusfrom_VSTS__c</fullName>
        <description>VSTS status in salesforce</description>
        <label>Last Statusfrom VSTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Referral_Id__c</fullName>
        <description>This will hold the Referral Id</description>
        <label>Referral_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_RequestType__c</fullName>
        <label>RequestType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_SAP_Account_Num__c</fullName>
        <description>Used in ESC_VSTS_Staging</description>
        <label>SAP Account Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_SAP_TenancyName__c</fullName>
        <label>SAP TenancyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Staging_Status__c</fullName>
        <label>Staging Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Time_Stamp_Sent__c</fullName>
        <label>Time Stamp Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_VSTS_Id__c</fullName>
        <label>VSTS Ticket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_VSTS_SLA_End_Date__c</fullName>
        <label>VSTS SLA End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Value__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>VSTS Staging</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>ESC_Case_Number__c</columns>
        <columns>ESC_Feed_Comment__c</columns>
        <columns>ESC_RequestType__c</columns>
        <columns>ESC_Staging_Status__c</columns>
        <columns>ESC_Error_Log__c</columns>
        <columns>ESC_Time_Stamp_Sent__c</columns>
        <columns>ESC_Last_Comment_from_VSTS__c</columns>
        <columns>ESC_Last_Statusfrom_VSTS__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ESC_VSTS_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESC_Case_Number__c</field>
            <operation>startsWith</operation>
            <value>03306415</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VSTS-{00000000}</displayFormat>
        <label>VSTS Stagging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VSTS Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>